--- a/src/css/index.css
+++ b/src/css/index.css
@@ -77,7 +77,7 @@ font-size: 25px;
   z-index: 10;
 }
 .menu {
-  margin-top: 125px;
+  margin-top: 80px;
   margin-bottom: 100px;
 }
 .headline-new-profile {
@@ -292,6 +292,12 @@ margin: 0;
 padding-top: 15px;
 padding-bottom: 10px;
 }
+
+.queue-headline {
+
+  padding-top: 15px;
+  padding-bottom: 10px;
+  }
 
 
 .people-upvotes {
