--- a/src/css/index.css
+++ b/src/css/index.css
@@ -93,17 +93,20 @@ font-size: 25px;
   margin-bottom: 200px;
 }
 .song-name {
-  float: left;
-  position: relative;
-  left: 15px;
-  font-size: 40px;
+ font-size: 30px;
+  
 }
 .song-artist{
-  float: left;
-  position: relative;
-  left: 15px;
-  font-size: 30px;
+  
+  font-size: 20px;
+position: relative;
+bottom: 25px;
+  
 }
+.song-info {
+  text-align: left;
+}
+
 .first-button {
   border-top-left-radius: 50px;
   border-bottom-left-radius: 50px;
@@ -136,8 +139,8 @@ font-size: 25px;
   margin-top: 110px;
   margin-bottom: 150px;
 }
-.right {
-  float: right;
+.voting {
+  width: 75px;
   position: relative;
   right: 10px;
   bottom: 5px;
@@ -202,9 +205,9 @@ font-size: 25px;
   z-index: 2;
 }
 .song {
-height: 130px;
 
-
+display: flex;
+justify-content: space-between;
 
 }
 
@@ -296,13 +299,13 @@ margin: 0;
 .session-headline {
 
 padding-top: 15px;
-padding-bottom: 10px;
+padding-bottom: 15px;
 }
 
 .queue-headline {
 
   padding-top: 15px;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
   }
 
 
@@ -358,8 +361,8 @@ padding-bottom: 10px;
   .menu,
   .under-navbar,
   .search-div, .header, .people-navba, .header {
-    padding-left: 450px;
-    padding-right: 450px;
+    padding-left: 400px;
+    padding-right: 400px;
   }
   .profile-picture-fullscreen {
     width: 20%;
